--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --static . --watch mock.json"
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
